# drug_complaint_parser

./: main.py  pyproject.toml
backend/: complaint_data_generator.html  simulate_complaint_data_parameters.py
notes/: notes.txt
tests/: eda_simulated_data.py
